// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatisticSection component should render NoProductAvailable when no data is available and match snapshot 1`] = `
<div>
  <div
    class="grid grid-cols-1 lg:grid-cols-2 xl:grid-cols-4 gap-8"
  >
    <div
      class="text-center text-gray-500 dark:text-gray-400 "
    >
      No statistics available at the moment
    </div>
  </div>
</div>
`;

exports[`StatisticSection component should render all content with resolved data and match snapshot 1`] = `
<div>
  <div
    class="grid grid-cols-1 lg:grid-cols-2 xl:grid-cols-4 gap-8"
  >
    <div
      class="w-full"
    >
      <div
        class="flex flex-col relative overflow-hidden h-auto text-foreground box-border outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 shadow-medium rounded-large transition-transform-background motion-reduce:transition-none p-2 sm:p-4 xl:p-8 2xl:py-10 2xl:px-8 bg-white rounded-10 dark:bg-gray-400"
        style="border-radius: undefined; box-shadow: none;"
        tabindex="-1"
      >
        <div
          class="relative flex w-full p-3 flex-auto flex-col place-content-inherit align-items-inherit h-auto break-words text-left overflow-y-auto subpixel-antialiased"
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        class="flex flex-col relative overflow-hidden h-auto text-foreground box-border outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 shadow-medium rounded-large transition-transform-background motion-reduce:transition-none p-2 sm:p-4 xl:p-8 2xl:py-10 2xl:px-8 bg-white rounded-10 dark:bg-gray-400"
        style="border-radius: undefined; box-shadow: none;"
        tabindex="-1"
      >
        <div
          class="relative flex w-full p-3 flex-auto flex-col place-content-inherit align-items-inherit h-auto break-words text-left overflow-y-auto subpixel-antialiased"
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        class="flex flex-col relative overflow-hidden h-auto text-foreground box-border outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 shadow-medium rounded-large transition-transform-background motion-reduce:transition-none p-2 sm:p-4 xl:p-8 2xl:py-10 2xl:px-8 bg-white rounded-10 dark:bg-gray-400"
        style="border-radius: undefined; box-shadow: none;"
        tabindex="-1"
      >
        <div
          class="relative flex w-full p-3 flex-auto flex-col place-content-inherit align-items-inherit h-auto break-words text-left overflow-y-auto subpixel-antialiased"
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        class="flex flex-col relative overflow-hidden h-auto text-foreground box-border outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 shadow-medium rounded-large transition-transform-background motion-reduce:transition-none p-2 sm:p-4 xl:p-8 2xl:py-10 2xl:px-8 bg-white rounded-10 dark:bg-gray-400"
        style="border-radius: undefined; box-shadow: none;"
        tabindex="-1"
      >
        <div
          class="relative flex w-full p-3 flex-auto flex-col place-content-inherit align-items-inherit h-auto break-words text-left overflow-y-auto subpixel-antialiased"
        />
      </div>
    </div>
  </div>
</div>
`;
